# erdeniz_security

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CURSOR_PROMPT.md  Dockerfile  INSTALL.md  LICENSE  README.md  manage.py  pyproject.toml  requirements-android.txt  requirements-windows.txt  requirements.txt  setup.py  setup_security.bat  setup_security.sh
erdeniz_security/: __init__.py  admin.py  api_security.py  apps.py  audit.py  config.py  decorators.py  encryption.py  env_protector.py  fields.py  hashers.py  middleware.py  models.py  network_guard.py  validators.py
erdeniz_security/locale/tr/LC_MESSAGES/: django.po
erdeniz_security/management/commands/: decrypt_env.py  encrypt_env.py  encrypt_existing.py  encrypt_files.py  generate_api_key.py  generate_key.py  generate_password.py  generate_test_env.py  rotate_field_key.py  security_check.py
erdeniz_security/migrations/: 0001_initial.py
erdeniz_security/templates/admin/erdeniz_security/securityauditlog/: change_list.html
erdeniz_security/tests/: settings.py  test_api_security.py  test_audit.py  test_config.py  test_encryption.py  test_env_protector.py  test_fields.py  test_hashers.py  test_middleware.py  urls.py
